unit test loading local gzip compressed model file